<resources>
    <string name="app_name">七彩虹</string>
    <string name="strip_mkpay_btn_finish">完成</string>
    <string name="titlebar_确认收货地址">确认收货地址</string>
    <string name="titlebar_登录">登录</string>
    <string name="titlebar_选择收货地址">选择收货地址</string>
    <string name="titlebar_取消">取消</string>
    <string name="titlebar_退出">退出</string>
    <string name="titlebar_注册">注册</string>
    <string name="titlebar_积分商城">积分商城</string>
    <string name="titlebar_积分兑换">积分兑换</string>
    <string name="titlebar_收货地址">收货地址</string>
    <string name="titlebar_账户信息">账户信息</string>
    <string name="titlebar_我的">我的</string>
    <string name="titlebar_我的收藏">我的收藏</string>
    <string name="titlebar_服务中心">服务中心</string>
    <string name="titlebar_兑换记录">兑换记录</string>
    <string name="titlebar_消息中心">消息中心</string>
    <string name="titlebar_订单详情">订单详情</string>
    <string name="titlebar_换绑手机">换绑手机</string>
    <string name="titlebar_在线支付">在线支付</string>
    <string name="titlebar_评价商家">评价商家</string>
    <string name="titlebar_新增地址">新增地址</string>
    <string name="titlebar_修改地址">修改地址</string>
    <string name="titlebar_积分详情">积分详情</string>
    <string name="titlebar_我的积分">我的积分</string>
    <string name="titlebar_设置密码">设置密码</string>
    <string name="titlebar_订单">订单</string>
    <string name="titlebar_关于">关于</string>
    <string name="titlebar_店铺详情">店铺详情</string>
    <string name="titlebar_订单备注">订单备注</string>
    <string name="titlebar_投诉反馈">投诉反馈</string>
    <string name="titlebar_密码登录">密码登录</string>
    <string name="titlebar_找回密码">找回密码</string>
    <string name="titlebar_选择信用卡">选择信用卡</string>
    <string name="hint_输入商家或商品名称">输入商家店铺名称或菜品</string>
    <string name="hint_姓名">请输入姓名</string>
    <string name="hint_手机号码">手机号码</string>
    <string name="hint_选择收货地址">选择收货地址</string>
    <string name="hint_楼层及房间号">详细街道名或门牌号</string>
    <string name="hint_请输入邮编">请输入邮编</string>
    <string name="hint_请输入新手机号">请输入新手机号</string>
    <string name="hint_请输入手机号">请输入手机号</string>
    <string name="hint_请输入密码">请输入密码</string>
    <string name="hint_请输入密码不少于6位">请输入密码(不少于6位)</string>
    <string name="hint_请输入验证码">请输入验证码</string>
    <string name="hint_请输入邀请码">请输入邀请码(可选)</string>
    <string name="hint_请输入关键词">请输入关键词</string>
    <string name="hint_请输入邀请人手机号">请输入邀请人手机号(选填)</string>
    <string name="hint_请输入新密码">请输入新密码</string>
    <string name="hint_请再次输入新密码">请再次输入新密码</string>
    <string name="hint_请输入要评价内容">请输入您的评价（200字以内）</string>
    <string name="hint_输入您想交代的话吧">输入您想交代的话吧~</string>
    <string name="hint_请输入您要投诉的内容">请输入您的反馈内容（200字以内）</string>
    <string name="hint_请再次输入密码">请再次输入密码</string>
    <string name="hint_请选择">请选择</string>
    <string name="normal_time">2017-9-12 09:21:00</string>
    <string name="normal_title">title</string>
    <string name="normal_content">content</string>
    <string name="normal_state">state</string>
    <string name="normal_name">name</string>
    <string name="normal_address">address</string>
    <string name="normal_ceshi">test</string>
    <string name="normal_user_name">username</string>
    <string name="login_msg_username">手机号：</string>
    <string name="login_msg_pwd">密&#160;&#160;&#160;&#160;&#160;码：</string>
    <string name="login_msg_pwd_again">确认密码:</string>
    <string name="login_msg_login">登录</string>
    <string name="login_msg_forget_pwd">忘记密码？</string>
    <string name="login_msg_auto">自动登录</string>
    <string name="login_msg_quick_login">手机短信登录</string>
    <string name="login_msg_third_login">使用第三方登录</string>
    <string name="login_msg_agree">我已看过并接受</string>
    <string name="用户协议">《用户协议》</string>
    <string name="免责条款">《免责条款》</string>
    <string name="login_msg_user">用户名</string>
    <string name="login_msg_wx">微信</string>
    <string name="login_msg_code">验证码：</string>
    <string name="login_msg_invitation">邀请人：</string>
    <string name="login_msg_region">区域：</string>
    <string name="login_msg_register">注册</string>
    <string name="btn_msg_exchange">兑换</string>
    <string name="btn_msg_select_ok">选好了</string>
    <string name="btn_msg_ok">确定</string>
    <string name="btn_msg_commit_eval">提交评价</string>
    <string name="btn_msg_cancel">取消</string>
    <string name="btn_msg_finish">完成</string>
    <string name="btn_msg_goto_index">前往首页</string>
    <string name="btn_去结算">去结算</string>
    <string name="btn_msg_click_exchange">点击兑换</string>
    <string name="btn_msg_come_exchange">立即兑换</string>
    <string name="btn_msg_register">注册</string>
    <string name="btn_msg_piece">来一份</string>
    <string name="btn_msg_delete">删除</string>
    <string name="btn_msg_eval">评价得积分</string>
    <string name="btn_msg_commit">提交</string>
    <string name="btn_msg_loading_again">重新加载</string>
    <string name="btn_msg_getcode">获取验证码</string>
    <string name="btn_msg_un_need">无特殊要求</string>
    <string name="btn_确认修改">确认修改</string>
    <string name="系统繁忙请稍后再试">系统繁忙，请稍后再试</string>
    <string name="user_msg_logo">头像</string>
    <string name="user_msg_user_name">用户名</string>
    <string name="user_msg_user_setting">账户设置</string>
    <string name="user_msg_phone">手机</string>
    <string name="user_msg_wx">微信</string>
    <string name="user_msg_pwd_modify">密码修改</string>
    <string name="user_msg_bind_wx">已绑定</string>
    <string name="user_msg_un_bind_wx">未绑定</string>
    <string name="user_msg_phone_num">手机号</string>
    <string name="user_msg_code">验证码</string>
    <string name="user_msg_pwd">密码</string>
    <string name="user_msg_pwd_confirm">确认密码</string>
    <string name="user_msg_getcode">获取验证码</string>
    <string name="user_msg_getcode_again">重新获取</string>
    <string name="user_msg_commit">确认修改</string>
    <string name="user_msg_commit_bind_phone">验证后绑定手机</string>
    <string name="user_msg_certification">实名认证</string>
    <string name="user_msg_sex">性别</string>
    <string name="user_msg_birthday">出生日期</string>
    <string name="user_msg_性别">性别：</string>
    <string name="user_msg_实名认证">实名认证</string>
    <string name="user_msg_出生日期">出生日期</string>
    <string name="certificaton_姓名">姓名</string>
    <string name="certification_现居地">现居地</string>
    <string name="certification_详细地址">详细地址</string>
    <string name="certification_审核状态">审核状态</string>
    <string name="certification_推荐人">推荐人</string>
    <string name="asset_在线充值">在线充值</string>
    <string name="asset_提现">提现</string>
    <string name="asset_资金明细">资金明细</string>
    <string name="asset_申请记录">申请记录</string>
    <string name="asset_银行卡管理">银行卡管理</string>
    <string name="bean_换购记录">换购记录</string>
    <string name="bean_换购申请">换购申请</string>
    <string name="integral_换购积分">换购积分</string>
    <string name="integral_积分记录">积分记录</string>
    <string name="spend_线下商家消费记录">线下商家消费记录</string>
    <string name="bean_金豆明细记录">金豆明细记录</string>
    <string name="integral_积分明细记录">积分明细记录</string>
    <string name="manage_线下消费提交">线下消费提交</string>
    <string name="manage_线下报单记录">线下报单记录</string>
    <string name="bean_商家兑换金豆">商家兑换金豆</string>
    <string name="vip_会员换购记录">会员换购记录</string>
    <string name="qrcode_商家收豆二维码">商家收豆二维码</string>
    <string name="Upgrade_有新的版本">有新的版本</string>
    <string name="退出">退出</string>
    <string name="更新">更新</string>
    <string name="取消">取消</string>
    <string name="安装">安装</string>
    <string name="正在下载请稍后">正在下载请稍后</string>
    <string name="请允许获取位置信息">请允许获取位置信息</string>
    <string name="应用正常所需权限被拒绝">应用正常所需权限被拒绝</string>
    <string name="获取验证码">获取验证码</string>
    <string name="重新获取">重新获取</string>
    <string name="login_忘记密码">忘记密码</string>
    <string name="login_手机号格式错误">手机号格式错误</string>
    <string name="login_密码由6到20位字符组成">密码由6到20位字符组成</string>
    <string name="login_验证码格式不正确">验证码格式不正确</string>
    <string name="login_密码格式错误">密码格式错误</string>
    <string name="login_手机号格式不正确">手机号格式不正确</string>
    <string name="login_注册需要同意协议">注册需要同意协议</string>
    <string name="login_同意协议内容">同意协议内容</string>
    <string name="login_请选择区域">请选择区域</string>
    <string name="home_惠家">惠家</string>
    <string name="home_分类">分类</string>
    <string name="home_购物车">购物车</string>
    <string name="home_客服">客服</string>
    <string name="home_我的">我的</string>
    <string name="home_再按一次退出">再按一次退出</string>
    <string name="me_余额">余额</string>
    <string name="me_金豆">金豆</string>
    <string name="me_积分">积分</string>
    <string name="me_待付款">待付款</string>
    <string name="me_待发货">待发货</string>
    <string name="me_已收货">已收货</string>
    <string name="me_我的订单">我的订单</string>
    <string name="me_查看全部">查看全部</string>
    <string name="me_会员中心">会员中心</string>
    <string name="me_关于惠家">关于惠家</string>
    <string name="me_退出账号">退出账号</string>
    <string name="login_账号管理">账号管理</string>
    <string name="login_省代理账号">省代理账号</string>
    <string name="login_代理账号">代理账号</string>
    <string name="login_商家账号">商家账号</string>
    <string name="me_金豆消费">金豆换购</string>
    <string name="me_资产明细">资产明细</string>
    <string name="me_会员账单">会员账单</string>
    <string name="me_银行卡">银行卡</string>
    <string name="me_我的推荐">我的推荐</string>
    <string name="me_申请代理">申请代理</string>
    <string name="me_申请商户">申请商户</string>
    <string name="info_请输入姓名">请输入姓名</string>
    <string name="basicinfo_请输入居住地址">请输入居住地址</string>
    <string name="certificationinfo_请输入用户名">请输入用户名</string>
    <string name="certificationinfo_请输入推荐人号码">请输入推荐人号码</string>
    <string name="bean_change_rule">1.金豆可在商家店铺消费时抵扣现金\n2. 会员申请换购时，需要指定惠家生活网联盟商家\n3. 会员申请换购时，会员金豆即时转给商家，不需要审核</string>
    <string name="gold_请输入金豆换购的个数">请输入金豆换购的个数</string>
    <string name="me_商家管理中心">商家管理中心</string>
    <string name="me_线下报单">线下报单</string>
    <string name="me_收货地址">收货地址</string>
    <string name="me_我的收藏">我的收藏</string>
    <string name="me_报单账单">报单记录</string>
    <string name="me_金豆兑换">兑换余额</string>
    <string name="me_账单">账单</string>
    <string name="me_商户信息">商户信息</string>
    <string name="me_在线充值">在线充值</string>
    <string name="me_收豆二维码">收豆二维码</string>
    <string name="me_代理管理中心">代理管理中心</string>
    <string name="me_区域城市">区域城市</string>
    <string name="me_区域收益">区域收益</string>
    <string name="me_余额提现">余额提现</string>
    <string name="me_提现记录">提现记录</string>
    <string name="me_区域商户">区域商户</string>
    <string name="me_商户申请">商户申请</string>
    <string name="me_代理业绩">代理业绩</string>
    <string name="me_辖区报单审核">辖区报单审核</string>
    <string name="busniess_兑换金豆">1.金豆满200个可以申请换购，且必须是100的倍数\n2. 商家金豆换购收取10%的手续费\n3. 商家金豆换购，最多需要2个工作日的审核时间\n4. 商家金豆换购，每天只能换购一次</string>
    <string name="order_commit_tip">如您要购买单据，您需要上传单\n据谢谢配合！</string>
    <string name="consume_commit_rule">1.请先保证账户有足够的余额\n2.消费金额需要满100元才可以提交\n3.每个会员每天累计最高可提交消费金额10000元\n4.只有商户可以报单，且只能给会员报单\n5.以上所有信息为必填项：</string>
    <string name="split_start">%1$s 跳过</string>
    <string name="me_前往">前往</string>
    <string name="me_退出">退出</string>
    <string name="_1_s">尾号%1$s</string>
    <string name="me_会员金豆换购">金豆换购</string>
    <string name="呼叫">呼叫</string>
    <string name="商户ID">&#160;&#160;&#160;&#160;店铺ID:</string>
    <string name="资产详情">资产详情</string>
    <string name="申请记录">申请记录</string>
    <string name="银行卡">银行卡</string>
    <string name="我的推荐">我的推荐</string>
    <string name="login_msg_usernum">手机号:</string>
    <string name="login_请确认密码">请确认密码</string>
    <string name="login_两次输入密码不一致">两次输入密码不一致</string>
    <string name="home_首页">首页</string>
    <string name="home_任务">已接任务</string>
    <string name="home_任务大厅">任务大厅</string>
    <string name="贷款余额">货款余额</string>
    <string name="金币余额">金币余额</string>
    <string name="贷款提现">货款提现：</string>
    <string name="全部提现">全部提现</string>
    <string name="hint_最少一元">最少一元</string>
    <string name="金币提现">金币提现：</string>
    <string name="hint_手续费">%手续费</string>
    <string name="支付密码">支付密码：</string>
    <string name="hint_初始密码888888">初始密码888888</string>
    <string name="忘记密码">忘记密码</string>
    <string name="管理银行卡">管理银行卡</string>
    <string name="withdraw_tip1">温馨提醒：货款和金币提现每日仅限一次，\n提现申请时间：00：00-12：00 提现处理时间：12：00-24：00 \n贷款提现不收取手续费，金币提现手续费为5%</string>
    <string name="试客账号">好友账号:%s</string>
    <string name="今日带来的赏金">今日带来的赏金：%s</string>
    <string name="累计带来的赏金">累计带来的赏金：%s</string>
</resources>