<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_titlebar" />
    <LinearLayout style="@style/input_layout">




        <TextView
            android:id="@+id/tv_phone_code"
            style="@style/login_input_tv"
            android:text="@string/login_msg_username" />

        <com.mark.app.hjshop4a.widget.PhoneEditText
            android:id="@+id/register_et_username"
            style="@style/login_input_et"
            android:layout_weight="1"
            android:hint="@string/hint_请输入手机号"
            android:inputType="number"
            android:maxLength="15" />

        <Button
            android:id="@+id/register_btn_code"
            style="@style/BaseBtn.Normal.Commonly"
            android:layout_width="wrap_content"
            android:layout_height="60px"
            android:layout_marginRight="20px"
            android:minWidth="170px"
            android:text="@string/btn_msg_getcode"
            android:textSize="24px" />
    </LinearLayout>

    <View
        style="@style/BaseLine.Horizontal"
        android:layout_marginLeft="30px" />

    <LinearLayout style="@style/input_layout">

        <TextView
            android:id="@+id/login_tv_code"
            style="@style/login_input_tv"
            android:text="@string/login_msg_code" />

        <EditText
            android:id="@+id/register_et_code"
            style="@style/login_input_et"
            android:hint="@string/hint_请输入验证码"
            android:inputType="number"
            android:maxLength="6" />
    </LinearLayout>

    <View
        style="@style/BaseLine.Horizontal"
        android:layout_marginLeft="30px" />

    <LinearLayout style="@style/input_layout">

        <TextView
            android:id="@+id/login_tv_pwd"
            style="@style/login_input_tv"
            android:text="@string/login_msg_pwd" />

        <EditText
            android:id="@+id/register_et_pwd"
            style="@style/login_input_et"
            android:layout_weight="1"
            android:hint="@string/hint_请输入密码不少于6位"
            android:inputType="textPassword"
            android:maxLength="20" />

        <ImageView
            android:id="@+id/register_iv_eye"
            android:layout_width="100px"
            android:layout_height="60px"
            android:paddingLeft="30px"
            android:paddingRight="30px"
            android:src="@drawable/select_password_eye" />
    </LinearLayout>

    <View
        style="@style/BaseLine.Horizontal"
        android:layout_marginLeft="30px" />

    <LinearLayout style="@style/input_layout"
        android:visibility="gone">

        <TextView
            android:id="@+id/login_tv_pwd_again"
            style="@style/login_input_tv"
            android:text="@string/login_msg_pwd_again" />

        <EditText
            android:id="@+id/register_et_pwd_again"
            style="@style/login_input_et"
            android:layout_weight="1"
            android:hint="@string/hint_请再次输入密码"
            android:inputType="textPassword"
            android:maxLength="20" />

        <ImageView
            android:id="@+id/register_iv_eye_again"
            android:layout_width="100px"
            android:layout_height="60px"
            android:paddingLeft="30px"
            android:paddingRight="30px"
            android:src="@drawable/select_password_eye" />
    </LinearLayout>

    <LinearLayout style="@style/input_layout"
        android:id="@+id/register_rl_region">

        <TextView
            android:id="@+id/login_tv_region"
            style="@style/login_input_tv"

            android:text="@string/login_msg_region" />

        <TextView
            android:id="@+id/register_et_region"
            style="@style/login_input_et"
            android:layout_weight="1"
            android:hint="@string/hint_请选择"
           android:gravity="center_vertical"
            android:maxLength="20" />

        <ImageView
            android:id="@+id/register_iv_region"
            android:layout_width="100px"
            android:layout_height="60px"
            android:paddingLeft="30px"
            android:paddingRight="30px"
            android:src="@mipmap/ic_bottom" />
    </LinearLayout>

    <LinearLayout
        style="@style/input_layout"
        android:layout_marginTop="20px">

        <TextView
            android:id="@+id/login_tv_in"
            style="@style/login_input_tv"
            android:text="@string/login_msg_invitation" />
        <com.mark.app.hjshop4a.widget.PhoneEditText
            android:id="@+id/register_et_invitation"
            style="@style/login_input_et"
            android:layout_weight="1"
            android:hint="@string/hint_请输入邀请人手机号"
            android:inputType="number"
            android:maxLength="15" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="90px"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/register_layout_agree"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="30px">

            <ImageView
                android:layout_width="30px"
                android:layout_height="30px"
                android:layout_marginRight="13px"
                android:src="@drawable/select_radio" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_msg_agree"
                android:textColor="#aaaaaa"
                android:textSize="@dimen/textsize_24px" />

        </LinearLayout>

        <TextView
            android:id="@+id/register_tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/用户协议"
            android:textColor="#ff385c"
            android:textSize="@dimen/textsize_24px" />
        <TextView
            android:id="@+id/register_tv_disclaimer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingRight="30px"
            android:text="@string/免责条款"
            android:textColor="#ff385c"
            android:textSize="@dimen/textsize_24px" />

    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        style="@style/BaseBtn.Normal.Important"
        android:layout_width="match_parent"
        android:layout_marginTop="27px"
        android:text="@string/btn_msg_register" />

</LinearLayout>
