<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/include_titlebar" />

    <LinearLayout style="@style/input_layout">

        <TextView

            style="@style/login_input_tv"
            android:text="@string/login_msg_usernum" />

        <com.mark.app.hjshop4a.widget.PhoneEditText
            android:id="@+id/et_username"
            style="@style/login_input_et"
            android:layout_weight="1"
            android:hint="@string/hint_请输入手机号"
            android:inputType="number"
            android:maxLength="15" />


    </LinearLayout>

    <View
        style="@style/BaseLine.Horizontal"
        android:layout_marginLeft="15dp" />

    <LinearLayout style="@style/input_layout">

        <TextView
            android:id="@+id/login_tv_code"
            style="@style/login_input_tv"
            android:text="@string/login_msg_code" />

        <EditText
            android:id="@+id/et_code"
            style="@style/login_input_et"
            android:hint="@string/hint_请输入验证码"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="6" />
        <Button
            android:id="@+id/btn_code"
            style="@style/BaseBtn.Normal.Commonly"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginRight="18dp"
            android:minWidth="85dp"
            android:text="@string/btn_msg_getcode"
            android:textSize="12dp" />
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        style="@style/BaseBtn.Normal.Important"
        android:layout_width="match_parent"
        android:textSize="14dp"
        android:text="@string/login_msg_login"
        android:layout_marginTop="32dp"/>
</LinearLayout>